--- a/Projeto/Sobre Nós/SobreNós.css
+++ b/Projeto/Sobre Nós/SobreNós.css
@@ -10,10 +10,31 @@ body {
 
 /* Estilo do cabeçalho */
 header {
-    background: #E84A60; /* Vermelho */
-    color: #FFFFFF; /* Branco */
-    padding: 20px 0;
+    background: #e84a60;
+    color: #fff;
+    padding: 10px;
     text-align: center;
+    width: 100%; /* Mantenha a largura em 100% */
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav {
+    margin: 15px 0;
+}
+
+nav a {
+    margin: 0 15px;
+    color: #29363d;
+    text-decoration: none;
+    font-family: "Anton", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+    transition: color 0.3s;
 }
 
 nav ul {
@@ -34,6 +55,10 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #65AFFF; /* Azul fraco */
+}
+
+nav a:hover {
+    color: #65AFFF; /* Azul fraco no hover */
 }
 
 /* Estilo das seções */
@@ -62,6 +87,12 @@ h2 {
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
+.integrantes div {
+    text-align: center; /* Centraliza o texto embaixo da imagem */
+    margin: 10px; /* Espaçamento entre os integrantes */
+}
+
 
 .integrantes img {
     border-radius: 50%;
