--- a/assets/detalhe do produto/detalhe.css
+++ b/assets/detalhe do produto/detalhe.css
@@ -1,255 +1,290 @@
+body {
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #000000; /* Preto */
+  color: #ffffff; /* Branco */
+  line-height: 1.6; /* Melhora a legibilidade */
+}
 
-    body {
-        font-family: 'Arial', sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #000000; /* Preto */
-        color: #FFFFFF; /* Branco */
-        line-height: 1.6; /* Melhora a legibilidade */
-    }
+.Logo {
+  animation: fadeIn 1s ease-in;
+}
 
-    header {
-        background: #e84a60;
-        color: #fff;
-        padding: 10px;
-        text-align: center;
-        width: 100%; /* Mantenha a largura em 100% */
-    }
-    nav {
-        margin: 15px 0;
-        font-family: "Anton", sans-serif;
-      }
-      
-      nav a {
-          margin: 0 15px;
-          color: #000000;
-          text-decoration: none;
-          font-family: "Anton", sans-serif;
-          font-weight: 400;
-          transition: color 0.3s, transform 0.3s;
-          position: relative; /* Para efeito de sublinhado */
-      }
-      
-      nav a:hover {
-          color: #65afff;
-          transform: scale(1.05);
-      }
-      
-      nav a:hover::after {
-          content: '';
-          display: block;
-          width: 100%;
-          height: 2px;
-          background: #65afff; /* Azul claro */
-          position: absolute;
-          bottom: -5px;
-          left: 0;
-          transition: width 0.3s;
-      }
-      
-    .header-content {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+.Logo:hover {
+  transform: scale(1.1);
+}
 
-      
+header {
+  background: #e84a60;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  width: 100%; /* Mantenha a largura em 100% */
+  display: flex;
+  justify-content: center;
+}
+nav {
+  margin: 15px 0;
+  font-family: "Anton", sans-serif;
+  margin-top: 20px;
+}
 
-    .container {
-        max-width: 800px;
-        margin: 20px auto; /* Espaçamento entre o topo e o contêiner */
-        background-color: #1B2845; /* Azul Forte */
-        padding: 30px; /* Aumenta o padding para melhor layout */
-        border-radius: 10px; /* Bordas mais suaves */
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Sombra para profundidade */
-    }
+nav a {
+  margin: 0 15px;
+  color: #000000;
+  text-decoration: none;
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  transition: color 0.3s, transform 0.3s;
+  position: relative; /* Para efeito de sublinhado */
+}
 
-    h1 {
-        text-align: center;
-        color: #ffffff; /* Vermelho */
-        font-size: 1; /* Aumenta o tamanho do título */
-        margin-bottom: 5px; /* Espaçamento abaixo do título */
-    }
+nav a:hover {
+  color: #65afff;
+  transform: scale(1.05);
+}
 
-    .produto {
-        border: 2px solid #65AFFF; /* Azul Fraco */
-        padding: 20px; /* Aumenta o padding */
-        margin: 15px 0; /* Espaçamento entre produtos */
-        background-color: #1B2845; /* Azul Forte */
-        border-radius: 8px; /* Bordas mais suaves */
-        transition: transform 0.3s, box-shadow 0.3s; /* Transição suave */
-    }
+nav a:hover::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #65afff; /* Azul claro */
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  transition: width 0.3s;
+}
 
-    .produto:hover {
-        transform: translateY(-5px); /* Levanta o produto ao passar o mouse */
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Aumenta a sombra */
-    }
+/* Animações */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
-    .botao {
-        display: block;
-        width: 96%;
-        background-color: #E84A60; /* Vermelho */
-        color: #FFFFFF; /* Branco */
-        padding: 15px; /* Aumenta o padding */
-        border: none;
-        cursor: pointer;
-        text-align: center;
-        border-radius: 5px;
-        text-decoration: none; /* Remove underline */
-        font-weight: bold;
-        font-size: 1.1em; /* Aumenta o tamanho da fonte */
-        transition: background-color 0.3s; /* Transição suave */
-    }
+.container {
+  max-width: 800px;
+  margin: 20px auto; /* Espaçamento entre o topo e o contêiner */
+  background-color: #1b2845; /* Azul Forte */
+  padding: 30px; /* Aumenta o padding para melhor layout */
+  border-radius: 10px; /* Bordas mais suaves */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Sombra para profundidade */
+}
 
-    .botao:hover {
-        background-color: #C6394C; /* Vermelho escuro */
-    }
+h1 {
+  text-align: center;
+  color: #ffffff; /* Vermelho */
+  font-size: 1; /* Aumenta o tamanho do título */
+  margin-bottom: 5px; /* Espaçamento abaixo do título */
+}
 
-    .search-input {
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px 0 0 4px;
-        width: 500px; 
-    }
-    
-    .search-button {
-        padding: 10px;
-        border: 1px solid #000000;
-        border-left: none;
-        border-radius: 0 4px 4px 0;
-        background-color: #1B2845;
-        color: white;
-        cursor: pointer;
-    }
-    
-    .search-button:hover {
-        background-color: #65AFFF;
-         transform: translateY(-2px);
-    }
+.produto {
+  border: 2px solid #65afff; /* Azul Fraco */
+  padding: 20px; /* Aumenta o padding */
+  margin: 15px 0; /* Espaçamento entre produtos */
+  background-color: #1b2845; /* Azul Forte */
+  border-radius: 8px; /* Bordas mais suaves */
+  transition: transform 0.3s, box-shadow 0.3s; /* Transição suave */
+}
 
-    footer {
-        background-color: #e84a60;
-        color: #fff;
-        text-align: center;
-        padding: 1rem 0;
-        margin-top: 40px;
-        width: 100vw; /* Garante que o footer ocupe 100% da largura da janela */
-        position: relative;
-        left: 0; /* Alinha o footer à esquerda */
-        right: 0; /* Alinha o footer à direita */
-        margin: 0; /* Remove qualquer margem */
-        margin-top: 189px;
-        box-sizing: border-box; /* Garante que padding e bordas sejam incluídos na largura */
-      }
-
-      
-img {
-    background-repeat: no-repeat;
-    height: 60px;
-    width: 160px;
-    padding-right: 15px;
+.produto:hover {
+  transform: translateY(-5px); /* Levanta o produto ao passar o mouse */
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); /* Aumenta a sombra */
 }
 
 .product img {
-    width: 30%;
-    height: auto;
-    transition: transform 0.3s; /* Transição suave para a imagem */
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
-.login-icon {
-    width: 50px; /* Ajuste o tamanho da bolinha */
-    height: 50px; /* Ajuste o tamanho da bolinha */
-    background-color: #FFFF; /* Cor da bolinha */
-    border-radius: 50%; /* Faz a bolinha ser redonda */
-    display: inline-block; /* Para alinhar corretamente */
-    position: relative; /* Para posicionar ícones dentro da bolinha, se necessário */
-    cursor: pointer; /* Para indicar que é clicável */
-    margin-left: 50px;
+.produto:hover .product img {
+  transform: scale(1.05);
 }
-  
-  /* Adicione um ícone dentro da bolinha, se necessário */
-  .login-icon::before {
-    content: '\f007'; /* Código Unicode para um ícone de usuário (pode variar conforme a fonte) */
-    font-family: 'Font Awesome 5 Free'; /* Use Font Awesome ou outra biblioteca de ícones */
-    font-weight: 900; /* Estilo do ícone */
-    color: rgb(0, 0, 0); /* Cor do ícone */
-    position: absolute; /* Para centralizar o ícone */
-    top: 50%; /* Centraliza verticalmente */
-    left: 50%; /* Centraliza horizontalmente */
-    transform: translate(-50%, -50%); /* Centraliza o ícone */
+
+
+.botao {
+  display: block;
+  width: 96%;
+  background-color: #e84a60; /* Vermelho */
+  color: #ffffff; /* Branco */
+  padding: 15px; /* Aumenta o padding */
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 5px;
+  text-decoration: none; /* Remove underline */
+  font-weight: bold;
+  font-size: 1.1em; /* Aumenta o tamanho da fonte */
+  transition: background-color 0.3s; /* Transição suave */
 }
-  
-  /* Ícone de carrinho */
-  .cart-icon {
-    width: 50px; /* Ajuste o tamanho da bolinha */
-    height: 50px; /* Ajuste o tamanho da bolinha */
-    background-color: #FFFF; /* Cor da bolinha */
-    border-radius: 50%; /* Faz a bolinha ser redonda */
-    display: inline-block; /* Para alinhar corretamente */
-    position: relative; /* Para posicionar ícones dentro da bolinha, se necessário */
-    cursor: pointer; /* Para indicar que é clicável */
-    margin-left: 20px; /* Espaçamento à esquerda do ícone */
+
+.botao:hover {
+  background-color: #c6394c; /* Vermelho escuro */
 }
-  
-  /* Adicione um ícone dentro da bolinha, se necessário */
-  .cart-icon::before {
-    content: '\f07a'; /* Código Unicode para um ícone de carrinho (pode variar conforme a fonte) */
-    font-family: 'Font Awesome 5 Free'; /* Use Font Awesome ou outra biblioteca de ícones */
-    font-weight: 900; /* Estilo do ícone */
-    color: rgb(0, 0, 0); /* Cor do ícone */
-    position: absolute; /* Para centralizar o ícone */
-    top: 50%; /* Centraliza verticalmente */
-    left: 50%; /* Centraliza horizontalmente */
-    transform: translate(-50%, -50%); /* Centraliza o ícone */
+
+.search-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px 0 0 4px;
+  width: 500px;
+}
+
+.search-button {
+  padding: 10px;
+  border: 1px solid #000000;
+  border-left: none;
+  border-radius: 0 4px 4px 0;
+  background-color: #1b2845;
+  color: white;
+  cursor: pointer;
+}
+
+.search-button:hover {
+  background-color: #65afff;
+  transform: translateY(-2px);
+}
+
+footer {
+  background-color: #e84a60;
+  color: #fff;
+  text-align: center;
+  padding: 1rem 0;
+  margin-top: 40px;
+  width: 100vw; /* Garante que o footer ocupe 100% da largura da janela */
+  position: relative;
+  left: 0; /* Alinha o footer à esquerda */
+  right: 0; /* Alinha o footer à direita */
+  margin: 0; /* Remove qualquer margem */
+  margin-top: 189px;
+  box-sizing: border-box; /* Garante que padding e bordas sejam incluídos na largura */
+}
+
+img {
+  background-repeat: no-repeat;
+  height: 60px;
+  width: 160px;
+  padding-right: 15px;
+}
+
+.product img {
+  width: 30%;
+  height: auto;
+  transition: transform 0.3s; /* Transição suave para a imagem */
+}
+
+/* Estilos dos Ícones */
+.login-icon,
+.cart-icon {
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  margin-left: 50px;
+  font-family: Arial;
+}
+
+.login-icon::before,
+.cart-icon::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: rgb(0, 0, 0);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.login-icon::before {
+  content: "\f007";
+}
+
+.cart-icon::before {
+  content: "\f07a";
+}
+
+[data-tooltip] {
+  position: relative;
+}
+
+[data-tooltip]:hover::after {
+  content: attr(data-tooltip);
+  position: absolute; /* Alterado para absolute */
+  top: 100%; /* Tooltip aparece abaixo do elemento */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  white-space: nowrap;
+  z-index: 10;
+}
+
+.star-icon[data-tooltip]:hover::after,
+.heart-icon[data-tooltip]:hover::after {
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .star-icon {
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    font-size: 24px; /* Ajuste o tamanho da estrela */
-    cursor: pointer;
-    width: 50px; /* Ajuste o tamanho da bolinha */
-    height: 50px; /* Ajuste o tamanho da bolinha */
-    background-color: #FFFF; /* Cor da bolinha */
-    border-radius: 50%; /* Faz a bolinha ser redonda */
-    display: inline-block; /* Para alinhar corretamente */
-    position: relative; /* Para posicionar ícones dentro da bolinha, se necessário */
-    cursor: pointer; /* Para indicar que é clicável */
-    margin-left: 20px; /* Espaçamento à esquerda do ícone */
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  font-size: 24px; /* Ajuste o tamanho da estrela */
+  cursor: pointer;
+  width: 50px; /* Ajuste o tamanho da bolinha */
+  height: 50px; /* Ajuste o tamanho da bolinha */
+  background-color: #ffff; /* Cor da bolinha */
+  border-radius: 50%; /* Faz a bolinha ser redonda */
+  display: inline-block; /* Para alinhar corretamente */
+  position: relative; /* Para posicionar ícones dentro da bolinha, se necessário */
+  cursor: pointer; /* Para indicar que é clicável */
+  margin-left: 20px; /* Espaçamento à esquerda do ícone */
 }
 .star-icon::before {
-    content: "\f005"; /* Código do ícone de estrela no Font Awesome */
-    font-family: 'Font Awesome 5 Free'; /* Use Font Awesome ou outra biblioteca de ícones */
-    font-weight: 900; /* Estilo do ícone */
-    color: rgb(251, 255, 0); /* Cor do ícone */
-    position: absolute; /* Para centralizar o ícone */
-    top: 50%; /* Centraliza verticalmente */
-    left: 50%; /* Centraliza horizontalmente */
-    transform: translate(-50%, -50%); /* Centraliza o ícone */
+  content: "\f005"; /* Código do ícone de estrela no Font Awesome */
+  font-family: "Font Awesome 5 Free"; /* Use Font Awesome ou outra biblioteca de ícones */
+  font-weight: 900; /* Estilo do ícone */
+  color: rgb(251, 255, 0); /* Cor do ícone */
+  position: absolute; /* Para centralizar o ícone */
+  top: 50%; /* Centraliza verticalmente */
+  left: 50%; /* Centraliza horizontalmente */
+  transform: translate(-50%, -50%); /* Centraliza o ícone */
 }
 
 /* Ícone do coração */
 .heart-icon {
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    font-size: 24px;            /* Ajuste o tamanho do coração */
-    cursor: pointer;
-    width: 50px;                /* Ajuste o tamanho da bolinha */
-    height: 50px;               /* Ajuste o tamanho da bolinha */
-    background-color: #FFFF;    /* Cor da bolinha */
-    border-radius: 50%;         /* Faz a bolinha ser redonda */
-    display: inline-block;      /* Para alinhar corretamente */
-    position: relative;         /* Para posicionar o ícone dentro da bolinha */
-    margin-left: 20px;          /* Espaçamento à esquerda do ícone */
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  font-size: 24px; /* Ajuste o tamanho do coração */
+  cursor: pointer;
+  width: 50px; /* Ajuste o tamanho da bolinha */
+  height: 50px; /* Ajuste o tamanho da bolinha */
+  background-color: #ffff; /* Cor da bolinha */
+  border-radius: 50%; /* Faz a bolinha ser redonda */
+  display: inline-block; /* Para alinhar corretamente */
+  position: relative; /* Para posicionar o ícone dentro da bolinha */
+  margin-left: 20px; /* Espaçamento à esquerda do ícone */
 }
 
 .heart-icon::before {
-    content: "\f004";          /* Código do ícone de coração no Font Awesome */
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: #FF0000;            /* Cor vermelha para o coração */
-    position: absolute;
-    top: 50%;                  /* Centraliza verticalmente */
-    left: 50%;                 /* Centraliza horizontalmente */
-    transform: translate(-50%, -50%); /* Centraliza o ícone */
+  content: "\f004"; /* Código do ícone de coração no Font Awesome */
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #ff0000; /* Cor vermelha para o coração */
+  position: absolute;
+  top: 50%; /* Centraliza verticalmente */
+  left: 50%; /* Centraliza horizontalmente */
+  transform: translate(-50%, -50%); /* Centraliza o ícone */
+}
+
+.star-icon:active,
+.heart-icon:active {
+  transform: scale(0.95);
 }
